demoapp/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: f5-demo-httpd
  namespace: f5demoapp
  labels:
    app: f5-demo-httpd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: f5-demo-httpd
  template:
    metadata:
      labels:
        app: f5-demo-httpd
    spec:
      containers:
        - name: f5-demo-httpd
          image: f5devcentral/f5-demo-httpd:openshift
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
